fdo#73080: Correctly count blank cells in COUNTBLANK.

Especially when formula cells are involved.

Conflicts:
	sc/source/core/tool/interpr1.cxx

Change-Id: I40950e7108778821c17d08354f01bb157b1551e6
(cherry picked from commit 3e2bd1e4022e25b77bcc8eba5e02c1adc57008a1)
(cherry picked from commit 51b215902d8e1f415b5fef49fc50c7167f0c7787)