sc/source/core/tool/interpr1.cxx
@@ -4594,13 +4594,39 @@ void ScInterpreter::ScMatch()
     }
 }
 
+namespace {
+
+bool isCellContentEmpty( const ScRefCellValue& rCell )
+{
+    switch (rCell.meType)
+    {
+        case CELLTYPE_VALUE:
+        case CELLTYPE_STRING:
+        case CELLTYPE_EDIT:
+            return false;
+        case CELLTYPE_FORMULA:
+        {
+            sc::FormulaResultValue aRes = rCell.mpFormula->GetResult();
+            if (aRes.meType != sc::FormulaResultValue::String)
+                return false;
+            if (!aRes.maString.isEmpty())
+                return false;
+        }
+        break;
+        default:
+            ;
+    }
+
+    return true;
+}
+
+}
 
 void ScInterpreter::ScCountEmptyCells()
 {
     if ( MustHaveParamCount( GetByte(), 1 ) )
     {
         sal_uLong nMaxCount = 0, nCount = 0;
-        CellType eCellType;
         switch (GetStackType())
         {
             case svSingleRef :
@@ -4608,8 +4634,9 @@ void ScInterpreter::ScCountEmptyCells()
                 nMaxCount = 1;
                 ScAddress aAdr;
                 PopSingleRef( aAdr );
-                eCellType = pDok->GetCellType(aAdr);
-                if (eCellType != CELLTYPE_NONE)
+                ScRefCellValue aCell;
+                aCell.assign(*pDok, aAdr);
+                if (!isCellContentEmpty(aCell))
                     nCount = 1;
             }
             break;
@@ -4630,7 +4657,8 @@ void ScInterpreter::ScCountEmptyCells()
                     ScCellIterator aIter( pDok, aRange, glSubTotal);
                     for (bool bHas = aIter.first(); bHas; bHas = aIter.next())
                     {
-                        if (!aIter.hasEmptyData())
+                        const ScRefCellValue& rCell = aIter.getRefCellValue();
+                        if (!isCellContentEmpty(rCell))
                             ++nCount;
                     }
                 }
